--- a/index.html
+++ b/index.html
@@ -6,22 +6,15 @@
 
     <!-- USE A MOBILE APPROPRIATE VIEWPORT SETTING SO THE UI APPEARS THE RIGHT SIZE -->
     <meta name="viewport" content="width=device-width,user-scalable=no,minimal-ui" />
-
-    <script src="https://cdn.babylonjs.com/babylon.js"></script>
-    <!-- <script src="https://cdn.babylonjs.com/babylon.max.js"></script> -->
-    <script src="https://libs.zappar.com/zappar-babylonjs/0.3.34/zappar-babylon.js"></script>
-
+    
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>Zappar for BabylonJS</title>
-
+<script src='https://cdn.babylonjs.com/babylon.js'></script><script src='https://libs.zappar.com/zappar-babylonjs/2.0.0/zappar-babylon.js'></script><link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 
 <body>
-
-    <!-- LOAD THE JAVASCRIPT THAT CONTROLS THE EXPERIENCE -->
-    <script src="index.js"></script>
-
+<script type="module" src="index.js"></script>
+    
 </body>
-
 </html>
